<resources>
    <string name="app_name">AppProto</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="timesheet_entry">Timesheet entry</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="start_time">Start time</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="save_data">Save data</string>
    <string name="use_image">Use image</string>
    <string name="capture">capture</string>
    <string name="save_image">Save Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload_image">Upload image</string>
    <string name="view_records">View Records</string>
    <string name="advanced_camera">Advanced Camera</string>
    <string name="val_1">Val 1</string>
    <string name="val_2">Val 2</string>
    <string name="val_3">Val 3</string>
    <string name="val_4">Val 4</string>
    <string name="calc">Calc</string>
    <string name="chart">Chart</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="share_task">share_task</string>
    <string name="about_this_app">About This App</string>
</resources>